[package]
authors = ["Paho Lurie-Gregg <paho.luriegregg@outreach.io>"]
edition = "2021"
name = "playlister"
version = "0.1.0"
license = "MIT or Apache-2.0"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.6"
futures = "0.3.21"
htmlescape = "0.3.1"
itertools = "0.10.3"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
