[package]
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]
edition = "2024"
name    = "playlister"
version = "2.0.0"
license = "MIT or Apache-2.0"

[dependencies]
color-eyre         = "0.6.3"
config             = "0.15.11"
dashmap            = { version = "6.1.0", features = ["serde"] }
dotenv             = "0.15.0"
eyre               = "0.6.12"
futures            = "0.3.31"
htmlescape         = "0.3.1"
itertools          = "0.14.0"
regex              = "1.11.1"
reqwest            = { version = "0.12.15", features = ["json"] }
serde              = { version = "1.0.219", features = ["derive", "rc"] }
serde_json         = "1.0.140"
tokio              = { version = "1.44.2", features = ["full"] }
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"
